# ZString

./: .gitignore  CMakeLists.txt  Makefile  README.md  riesenie.cpp  riesenie.h  testyUloha_1.cpp
src/: CMakeLists.txt  helpers.cpp  helpers.h  main.cpp  riesenie.cpp  riesenie.h  zstring.cpp  zstring.h
srcGoogleTest/: gtest-death-test.cc  gtest_main.cc
test/: CMakeLists.txt  gtest_main.cc  test_helpers.cpp  test_zstring.cpp  testyUloha_1.cpp
